--- a/skk.css
+++ b/skk.css
@@ -71,6 +71,7 @@ body {
 
 .cikk_szöveg {
     width: 2000px;
+    font-family: 'Arial Rounded MT';
 }
 
 .cikk_szöveg h2 {
@@ -85,6 +86,7 @@ body {
 
 h1 {
     margin-left: 20px;
+    font-family: 'Arial Rounded MT';
 }
 
 .cikk2 {
@@ -107,6 +109,7 @@ h1 {
 
 .cikk_szöveg2 {
     width: 2000px;
+    font-family: 'Arial Rounded MT';
 }
 
 .cikk_szöveg2 h2 {
@@ -139,6 +142,7 @@ h1 {
 
 .cikk_szöveg3 {
     width: 2000px;
+    font-family: 'Arial Rounded MT';
 }
 
 .cikk_szöveg3 h2 {
@@ -147,6 +151,5 @@ h1 {
 
 .cikk_szöveg3 p {
     margin: 0;
-    font-family: 'Arial Rounded MT Bold';
     max-width: 500px;
 }
