--- a/skk.css
+++ b/skk.css
@@ -11,6 +11,7 @@ body {
     padding: 10px 20px;
     background-color: #0D0D0D;
     color: #ffffff;
+    font-family: 'Arial Rounded MT';
 }
 
 .logo {
